# mono

./: .gitmodules  AGENTS.md  Cargo.toml  justfile  meson.build  meson.options  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/check/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/format/: SKILL.md
.claude/skills/test/: SKILL.md
.github/: pre-commit-config.yaml
docs/: build_system.md  libnx_overrides.md
docs/patterns/: error_reporting.md  rustdocs.md
subprojects/libdeko3d-dkp/: meson.build  meson.options
subprojects/libnx/: meson.build  meson.options
subprojects/libnx-dkp/: meson.build  meson.options
subprojects/nx-alloc/: Cargo.toml  alloc_override.ld  meson.build
subprojects/nx-alloc/src/: config.rs  ffi.rs  global.rs  lib.rs  llalloc.rs  llffalloc.rs  sync.rs
subprojects/nx-cpu/: Cargo.toml  meson.build
subprojects/nx-cpu/include/: nx_cpu_tls.h
subprojects/nx-cpu/src/: control_regs.rs  counter.rs  lib.rs  tls.rs
subprojects/nx-hbmenu/: meson.build  meson.options
subprojects/nx-hbmenu-launch/: meson.build
subprojects/nx-object/: Cargo.toml  meson.build
subprojects/nx-object/src/: lib.rs  raw.rs  write.rs
subprojects/nx-object/src/elf/: segments.rs
subprojects/nx-object/src/raw/: mod0.rs  nacp.rs  npdm.rs  nro.rs  nso.rs  romfs.rs
subprojects/nx-object/src/read/: mod0.rs  npdm.rs  nro.rs  nso.rs  romfs.rs
subprojects/nx-object/src/write/: nacp.rs  nro.rs  nso.rs  romfs.rs
subprojects/nx-panic-handler/: Cargo.toml  meson.build
subprojects/nx-panic-handler/src/: lib.rs
subprojects/nx-rand/: Cargo.toml  meson.build  rand_override.ld
subprojects/nx-rand/src/: ffi.rs  lib.rs  sys.rs
subprojects/nx-rt/: Cargo.toml  meson.build  rt_override.ld
subprojects/nx-rt-env/: Cargo.toml  meson.build  rt_env_override.ld
subprojects/nx-rt-env/src/: ffi.rs  hos_version.rs  lib.rs  main_thread.rs  syscall_hint.rs
subprojects/nx-rt/src/: apm_manager.rs  applet_manager.rs  argv.rs  env.rs  ffi.rs  hid_manager.rs  init.rs  lib.rs  nv_manager.rs  service_manager.rs  service_registry.rs  thread_registry.rs  time_manager.rs  vi_manager.rs
subprojects/nx-rt/src/env/: config.rs  main_thread.rs
subprojects/nx-rt/src/ffi/: apm.rs  applet.rs  argv.rs  common.rs  env.rs  hid.rs  nv.rs  setsys.rs  sm.rs  time.rs  vi.rs
subprojects/nx-service-apm/: Cargo.toml  meson.build
subprojects/nx-service-apm/src/: cmif.rs  lib.rs  proto.rs
subprojects/nx-service-applet/: Cargo.toml  meson.build
subprojects/nx-service-applet/src/: aruid.rs  cmif.rs  common_state.rs  lib.rs  proto.rs
subprojects/nx-service-hid/: Cargo.toml  meson.build
subprojects/nx-service-hid/src/: cmif.rs  lib.rs  proto.rs  shmem.rs
subprojects/nx-service-hid/src/shmem/: layout.rs  lifo.rs  types.rs
subprojects/nx-service-nv/: Cargo.toml  meson.build
subprojects/nx-service-nv/src/: cmif.rs  fd.rs  lib.rs  proto.rs  types.rs
subprojects/nx-service-set/: Cargo.toml  meson.build
subprojects/nx-service-set/src/: cmif.rs  lib.rs  proto.rs  tipc.rs
subprojects/nx-service-sm/: Cargo.toml  meson.build
subprojects/nx-service-sm/src/: cmif.rs  lib.rs  proto.rs  tipc.rs
subprojects/nx-service-time/: Cargo.toml  meson.build
subprojects/nx-service-time/src/: cmif.rs  lib.rs  proto.rs  shmem.rs  types.rs
subprojects/nx-service-vi/: Cargo.toml  meson.build
subprojects/nx-service-vi/src/: binder.rs  cmif.rs  lib.rs  parcel.rs  proto.rs  types.rs
subprojects/nx-service-vi/src/cmif/: application.rs  binder.rs  manager.rs  root.rs  system.rs
subprojects/nx-sf/: Cargo.toml  meson.build  meson.options  sf_override.ld
subprojects/nx-sf/src/: cmif.rs  ffi.rs  hipc.rs  lib.rs  service.rs  service_name.rs  tipc.rs
subprojects/nx-std/: Cargo.toml  meson.build  meson.options
subprojects/nx-std-sync/: Cargo.toml  meson.build  std_sync_override.ld
subprojects/nx-std-sync/include/: nx_sync_oneshot.h
subprojects/nx-std-sync/src/: condvar.rs  lib.rs  mutex.rs  once_lock.rs  oneshot.rs  rwlock.rs  semaphore.rs
subprojects/nx-std-thread/: Cargo.toml  meson.build  std_thread_override.ld
subprojects/nx-std-thread/include/: nx_virtmem.h
subprojects/nx-std-thread/src/: ffi.rs  lib.rs  sys.rs  vmm.rs
subprojects/nx-std/src/: ffi.rs  lib.rs
subprojects/nx-svc/: Cargo.toml  meson.build  svc_override.ld
subprojects/nx-svc/include/: nx_svc.h
subprojects/nx-svc/src/: code.rs  debug.rs  error.rs  ffi.rs  handle.rs  ipc.rs  lib.rs  mem.rs  misc.rs  process.rs  raw.rs  result.rs  sync.rs  thread.rs
subprojects/nx-sync/: Cargo.toml  meson.build  sync_redirect.ld
subprojects/nx-sync/include/: nx_sync_barrier.h  nx_sync_mutex.h  nx_sync_remutex.h  nx_sync_rwlock.h  nx_sync_semaphore.h
subprojects/nx-sync/src/: barrier.rs  condvar.rs  ffi.rs  lib.rs  mutex.rs  rwlock.rs  semaphore.rs  sys.rs
subprojects/nx-sys-mem/: Cargo.toml  meson.build  sys_mem_override.ld
subprojects/nx-sys-mem/src/: alignment.rs  buf.rs  lib.rs  shmem.rs  stack.rs  tmem.rs  vmm.rs
subprojects/nx-sys-sync/: Cargo.toml  meson.build  sys_sync_override.ld
subprojects/nx-sys-sync/include/: nx_sys_sync_barrier.h  nx_sys_sync_condvar.h  nx_sys_sync_mutex.h  nx_sys_sync_remutex.h  nx_sys_sync_rwlock.h  nx_sys_sync_semaphore.h
subprojects/nx-sys-sync/src/: barrier.rs  condvar.rs  ffi.rs  lib.rs  mutex.rs  once.rs  remutex.rs  rwlock.rs  semaphore.rs
subprojects/nx-sys-thread/: Cargo.toml  meson.build  sys_thread_override.ld
subprojects/nx-sys-thread-tls/: Cargo.toml  meson.build  thread_tls_override.ld
subprojects/nx-sys-thread-tls/src/: ffi.rs  lib.rs
subprojects/nx-sys-thread/include/: nx_sys_thread.h
subprojects/nx-sys-thread/src/: ffi.rs  init.rs  lib.rs  registry.rs  sleep.rs  slots.rs  sys.rs  thread_context.rs  thread_create.rs  thread_exit.rs  thread_handle.rs  thread_impl.rs  tls.rs  (+9 more)
subprojects/nx-thread/: Cargo.toml  meson.build  thread_redirect.ld
subprojects/nx-thread-tls/: meson.build
subprojects/nx-time/: Cargo.toml  meson.build  time_override.ld
subprojects/sysroot-dkp/: meson.build  meson.options
subprojects/tests/: meson.build  meson.options
(+86 files in other folders)
