[workspace]
resolver = "2"
members = [
    "subprojects/nx-alloc",
    "subprojects/nx-cpu",
    "subprojects/nx-object",
    "subprojects/nx-panic-handler",
    "subprojects/nx-rand",
    "subprojects/nx-rt",
    "subprojects/nx-rt-env",
    "subprojects/nx-std",
    "subprojects/nx-std-sync",
    "subprojects/nx-svc",
    "subprojects/nx-sys-mem",
    "subprojects/nx-sys-sync",
    "subprojects/nx-sys-thread",
    "subprojects/nx-time",
]
