# Provide the path to the devkitPro directory
option(
    'devkitpro',
    type : 'string', value : '/opt/devkitpro',
    description : 'Path to devkitPro directory',
    yield : true
)

option(
    'use_libnx_dkp',
    type : 'feature', value : 'disabled',
    description : 'Use pre-built devkitPro libnx',
    yield : true
)
