# Provide the path to the devkitPro directory
option(
    'devkitpro',
    type : 'string', value : '/opt/devkitpro',
    description : 'Path to devkitPro directory',
    yield : true
)

option(
    'use_libnx_dkp',
    type : 'feature', value : 'disabled',
    description : 'Use pre-built devkitPro libnx',
    yield : true
)

option(
    'use_nx_cpu',
    type : 'feature', value : 'disabled',
    description : 'Use nx-cpu instead of libnx implementation',
    yield : true
)

option(
    'use_nx_svc',
    type : 'feature', value : 'disabled',
    description : 'Use nx-svc instead of libnx implementation',
    yield : true
)

option(
    'use_nx_sync',
    type : 'feature', value : 'disabled',
    description : 'Use nx-sync instead of libnx implementation',
    yield : true
)

option(
    'use_nx_thread',
    type : 'feature', value : 'disabled',
    description : 'Use nx-thread instead of libnx implementation',
    yield : true
)

option(
    'use_nx_time',
    type : 'feature', value : 'disabled',
    description : 'Use nx-time instead of libnx implementation',
    yield : true
)
