# Provide the path to the devkitPro directory
option(
    'devkitpro',
    type : 'string', value : '/opt/devkitpro',
    description : 'Path to devkitPro directory',
    yield : true
)

option(
    'use_libnx_dkp',
    type : 'feature', value : 'disabled',
    description : 'Use pre-built devkitPro libnx',
    yield : true
)

option(
    'use_nx',
    type : 'feature', value : 'disabled',
    description : 'Override all libnx functions with nx- functions',
    yield : true
)

option(
    'use_nx_alloc',
    type : 'feature', value : 'auto',
    description : 'Override all libnx functions with nx-alloc functions',
    yield : true
)

option(
    'use_nx_cpu',
    type : 'feature', value : 'auto',
    description : 'Override all libnx functions with nx-cpu functions',
    yield : true
)

option(
    'use_nx_rand',
    type : 'feature', value : 'auto',
    description : 'Override all libnx functions with nx-rand functions',
    yield : true
)

option(
    'use_nx_std_sync',
    type : 'feature', value : 'auto',
    description : 'Override all libnx functions with nx-std-sync functions',
    yield : true
)

option(
    'use_nx_svc',
    type : 'feature', value : 'auto',
    description : 'Override all libnx functions with nx-svc functions',
    yield : true
)

option(
    'use_nx_sys_sync',
    type : 'feature', value : 'auto',
    description : 'Override all libnx functions with nx-sys-sync functions',
    yield : true
)

option(
    'use_nx_sys_thread',
    type : 'feature', value : 'auto',
    description : 'Override all libnx functions with nx-sys-thread functions',
    yield : true
)

option(
    'use_nx_thread',
    type : 'feature', value : 'auto',
    description : 'Override all libnx functions with nx-thread functions',
    yield : true
)

option(
    'use_nx_time',
    type : 'feature', value : 'auto',
    description : 'Override all libnx functions with nx-time functions',
    yield : true
)
