# Provide the path to the devkitPro directory
option(
    'devkitpro',
    type : 'string', value : '/opt/devkitpro',
    description : 'Path to devkitPro directory'
) 
option(
    'use_nx_svc',
    type : 'feature', value : 'disabled',
    description : 'Use nx-svc instead of libnx implementation',
    yield : true
)

option(
    'use_nx_sync',
    type : 'feature', value : 'disabled',
    description : 'Use nx-sync instead of libnx implementation',
    yield : true
)

option(
    'use_nx_thread',
    type : 'feature', value : 'disabled',    
    description : 'Use nx-thread instead of libnx implementation',
    yield : true
)

option(
    'use_nx_thread_tls',
    type : 'feature', value : 'disabled',
    description : 'Use nx-thread-tls instead of libnx implementation',
    yield : true
)

option(
    'use_nx_time',
    type : 'feature', value : 'disabled',
    description : 'Use nx-time instead of libnx implementation',
    yield : true
)

option(
    'use_nx_rand',
    type : 'feature', value : 'disabled',
    description : 'Use nx-rand instead of libnx implementation',
    yield : true
)
