# Provide the path to the devkitPro directory
option(
    'devkitpro',
    type : 'string', value : '/opt/devkitpro',
    description : 'Path to devkitPro directory'
) 

option(
    'use_nx',
    type : 'feature', value : 'disabled',
    description : 'Override all libnx functions with nx- functions',
    yield : true
)

option(
    'use_nx_alloc',
    type : 'feature', value : 'disabled',
    description : 'Use nx-alloc instead of libnx implementation',
    yield : true
)

option(
    'use_nx_rand',
    type : 'feature', value : 'disabled',
    description : 'Use nx-rand instead of libnx implementation',
    yield : true
)

option(
    'use_nx_svc',
    type : 'feature', value : 'disabled',
    description : 'Use nx-svc instead of libnx implementation',
    yield : true
)

option(
    'use_nx_sys_mem',
    type : 'feature', value : 'disabled',
    description : 'Use nx-sys-mem instead of libnx implementation',
    yield : true
)

option(
    'use_nx_sys_sync',
    type : 'feature', value : 'disabled',
    description : 'Use nx-sys-sync instead of libnx implementation',
    yield : true
)

option(
    'use_nx_sys_thread',
    type : 'feature', value : 'disabled',
    description : 'Use nx-sys-thread instead of libnx implementation',
    yield : true
)

option(
    'use_nx_time',
    type : 'feature', value : 'disabled',
    description : 'Use nx-time instead of libnx implementation',
    yield : true
)
