[package]
name = "nx-alloc"
version = "0.1.0"
edition = "2024"

[lib]
name = "nx_alloc"
crate-type = ["rlib", "staticlib"]
test = false
doctest = false
bench = false

[features]
# Enable the __nx_alloc FFI
ffi = []
# Enable the `#[global_allocator]` for the dependent crates
global-allocator = []

[dependencies]
linked_list_allocator = { version = "0.10.5", default-features = false }
nx-panic-handler = { version = "0.1.0", path = "../nx-panic-handler" }
nx-rt-env = { version = "0.1.0", path = "../nx-rt-env" }
nx-svc = { version = "0.1.0", path = "../nx-svc" }
nx-sys-sync = { version = "0.1.0", path = "../nx-sys-sync" }
thiserror = { version = "2.0.12", default-features = false }
